# Perceptral

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md
app/: cube.h  main.cpp
assets/shaders/: pointcloud.glsl
include/Perceptral/: Perceptral.h
include/Perceptral/core/: AssetManager.h
include/Perceptral/core/assets/: PointCloud.h
include/Perceptral/renderer/: Shader.h
include/Perceptral/scene/: Components.h  Entity.h  Scene.h  Scriptable.h
include/Perceptral/scene/systems/: CameraControllerSystem.h  CameraSystem.h  RenderSystem.h  ScriptSystem.h  System.h
src/core/: Application.cpp  AssetManager.cpp  EventManager.cpp  Input.cpp  Log.cpp  Time.cpp  Window.cpp
src/core/assets/: PointCloud.cpp
src/platform/opengl/: OpenGLBuffer.cpp  OpenGLShader.cpp  OpenGLVertexArray.cpp
src/renderer/: Buffer.cpp  RenderAPI.cpp  Shader.cpp  ShaderLibrary.cpp  VertexArray.cpp
src/renderer/features/: BackgroundRenderer.cpp  GridAxisLineRenderer.cpp
src/scene/: Scene.cpp  SceneManager.cpp
src/scene/systems/: CameraControllerSystem.cpp  CameraSystem.cpp  RenderSystem.cpp  ScriptSystem.cpp
